--- a/web/src/app/inventory/product-transfer/product-transfer.component.html
+++ b/web/src/app/inventory/product-transfer/product-transfer.component.html
@@ -119,7 +119,7 @@
                                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Barcode</mat-label>
-                                        <input matInput name="ProdBarcode" [(ngModel)]="xferItem.BarCode" required
+                                        <input matInput name="ProdBarcode" [(ngModel)]="xferItem.Barcode" required
                                             [disabled]=true>
                                     </mat-form-field>
                                 </div>
@@ -228,7 +228,36 @@
                                                 </tr>
                                             </thead>
                                             <tbody class="text-center">
-                                             
+                                                <tr *ngFor="let data of xferList ; let i = index;">
+                                                    <td>{{ i + 1 }}</td>
+                                                    <td>{{data.ProductName}}</td>
+                                                    <td>{{data.BarCode}}</td>
+                                                    <td>{{data.TransferCount}}</td>
+                                                    <td>{{data.FromShop}}<span [style.color]="'blue'" *ngIf="data.FromAreaName !== 'null'">({{data.FromAreaName}})</span></td>
+                                                    <td>{{data.ToShop}}<span [style.color]="'blue'" *ngIf="data.ToAreaName !== 'null'">({{data.ToAreaName}})</span></td>
+                                                    <td>{{data.DateStarted}}</td>
+                                                    <td>{{data.TransferStatus}}</td>
+                                                    <td>{{data.CreatedByUser}}</td>
+                                                    <td>
+                                                        <b *ngIf="data.TransferFromShop == this.selectedShop[0]">
+                                                            {{data.AcceptanceCode}}
+                                                        </b>
+                                                    </td>
+                                                    <td>{{data.Remark}}</td>
+                                                    <td>
+                                                        <button *ngIf="data.TransferStatus === 'Transfer Initiated' && data.TransferFromShop == this.selectedShop[0]"  (click)="cancelTransfer(i)" mat-mini-fab color="warn">
+                                                            <mat-icon>block</mat-icon>
+                                                        </button>
+
+                                                        <button *ngIf="data.TransferStatus === 'Transfer Initiated' && data.TransferToShop ==  this.selectedShop[0]"  mat-mini-fab color="primary" (click)="acceptTransfer(i)" data-toggle="modal" data-target="#addModal">
+                                                            <mat-icon>check_circle_outline</mat-icon>
+                                                        </button>
+                                                    </td>
+                                                    <td> 
+                                                        <i class="far fa-file-pdf  mr-2" style="color:#007bff;cursor: pointer; font-size:  25px;">
+                                                        </i>
+                                                    </td>
+                                                </tr>
                                             </tbody>
                                         </table>
                                     </div>
