--- a/web/src/app/inventory/product-transfer/product-transfer.component.css
+++ b/web/src/app/inventory/product-transfer/product-transfer.component.css
@@ -1,3 +1,39 @@
 .mat-input-element:disabled, .mat-form-field-type-mat-native-select.mat-form-field-disabled .mat-form-field-infix::after {
     color: rgb(255 0 0);
 }
+
+.mat-icon {
+    pointer-events: none;
+  }
+
+
+
+
+  .block{
+    height: 37px;
+    width: 37px;
+    top: 0px;
+    font-size: 0px;
+    border-radius: 10% !important;
+  }
+
+  .pdf{
+    color: #ffffff;
+    cursor: pointer;
+    font-size: 23px;
+    padding: 12% 17%;
+    background: #3f51b5;
+    box-shadow: 2px 2px 10px #00000063;
+    border-radius: 14%;
+    cursor: pointer;
+  }
+
+  .shopPdf{
+    background: #3f51b5;
+    color: white;
+    border: none;
+    padding: 5% 10%;
+    border-radius: 12%;
+    box-shadow: 1px 1px 10px #0003;
+    cursor: pointer;
+  }
