--- a/web/src/app/inventory/product-transfer/product-transfer.component.html
+++ b/web/src/app/inventory/product-transfer/product-transfer.component.html
@@ -177,18 +177,19 @@
                                 </div>
                                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
                                     <button class="mr-3" mat-raised-button color="primary"
-                                        [disabled]="! f.valid">Intiate Transfer</button>
+                                        [disabled]="!f.valid || !this.xferItem.ToShopID">Intiate Transfer</button>
                                 </div>
                                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 ms-3">
                                     <button type="button" class="mr-3" mat-raised-button color="warn">Reset</button>
                                 </div>
                             </div>
-                            <hr>
-                            <div class="row" style="margin: 0;">
+                            <hr style="margin: 0;">
+                            <!-- fillter data list -->
+                            <div class="row pt-2" style="margin: 0;">
                                 <div class="col-md-2 p-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Shop Filter</mat-label>
-                                        <mat-select name="shopID" #shopID>
+                                        <mat-select name="shopID" #shopID (selectionChange)="FilterData(shopID.value)">
                                             <mat-option value="0">All</mat-option>
                                             <mat-option [value]="s.ID" *ngFor="let s of shopList"> {{s.Name}} <span
                                                     [style.color]="'blue'"
@@ -197,10 +198,28 @@
                                     </mat-form-field>
                                 </div>
                                 <div class="col-md-1">
-                                    <button style="cursor: pointer;" class="mr-1" type="button" mat-raised-button
-                                        color="primary"><mat-icon>picture_as_pdf</mat-icon></button>
+                                    <button  class="mr-1 shopPdf" type="button" ><mat-icon>picture_as_pdf</mat-icon></button>
                                 </div>
+                                  <div class="col-md-3 col-4 mx-md-auto" style="margin-top:0px;">
+                                    <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false" ngbPaginationEllipsis
+                                      [collectionSize]="collectionSize" #numPages [pageSize]="itemsPerPage" [(page)]="currentPage"
+                                      (pageChange)="getList()" [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
+                                    </ngb-pagination>
+                                  </div>
+                                  <div class="col-md-1 col-1 ps-md-0 ps-1">
+                                    <select class=" form-control"
+                                      style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
+                                      [(ngModel)]="itemsPerPage" (change)="getList();">
+                                      <option [ngValue]="10">Show 10 Row</option>
+                                      <option [ngValue]="25">Show 25 Row</option>
+                                      <option [ngValue]="50">Show 50 Row</option>
+                                      <option [ngValue]="100">Show 100 Row</option>
+                                      <option [ngValue]="250">Show 250Row</option>
+                                      <option [ngValue]="500">Show 500 Row</option>
+                                    </select>
+                                  </div>
                             </div>
+                            <!-- fillter data list -->
                         </form>
                         <!-- save Product Transfer end -->
                         <!-- list start -->
@@ -245,17 +264,16 @@
                                                     </td>
                                                     <td>{{data.Remark}}</td>
                                                     <td>
-                                                        <button *ngIf="data.TransferStatus === 'Transfer Initiated' && data.TransferFromShop == this.selectedShop[0]"  (click)="cancelTransfer(i)" mat-mini-fab color="warn">
+                                                        <button class="block" *ngIf="data.TransferStatus === 'Transfer Initiated' && data.TransferFromShop == this.selectedShop[0]"  (click)="cancelTransfer(i)" mat-mini-fab color="warn">
                                                             <mat-icon>block</mat-icon>
                                                         </button>
 
-                                                        <button *ngIf="data.TransferStatus === 'Transfer Initiated' && data.TransferToShop ==  this.selectedShop[0]"  mat-mini-fab color="primary" (click)="acceptTransfer(i)" data-toggle="modal" data-target="#addModal">
+                                                        <button (click)="openModal(content,data)"  *ngIf="data.TransferStatus === 'Transfer Initiated' && data.TransferToShop ==  this.selectedShop[0]"  mat-mini-fab color="primary" class="block" (click)="selectedRowID = i"  data-mdb-toggle="modal" data-mdb-target="#exampleModal">
                                                             <mat-icon>check_circle_outline</mat-icon>
                                                         </button>
                                                     </td>
                                                     <td> 
-                                                        <i class="far fa-file-pdf  mr-2" style="color:#007bff;cursor: pointer; font-size:  25px;">
-                                                        </i>
+                                                        <i class="far fa-file-pdf  mr-2 pdf" > </i>
                                                     </td>
                                                 </tr>
                                             </tbody>
@@ -271,3 +289,39 @@
         </div>
     </div>
 </section>
+
+<!-- Modal -->
+<ng-template #content role="document" let-modal>
+    <div class="modal-header" style="height: 50px;">
+      <h2 class="modal-title header pt-2" id="exampleModalLabel">Accept Product</h2>
+      <button type="button" class="btn-close" aria-hidden="true" (click)="modal.dismiss('Cross click')"></button>
+    </div>
+    <div class="modal-body">
+      <form #f="ngForm" autocomplete="off">
+            <div class="row">
+                <div class="col-12">
+                    <mat-form-field class="example-full-width" appearance="outline">
+                        <mat-label>Please Enter Confirmation Code
+                        </mat-label>
+                        <input matInput name="secret" [(ngModel)]="xferAccept.secretCode" required>
+                    </mat-form-field>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <mat-form-field class="example-full-width" appearance="outline">
+                        <mat-label>Remarks
+                        </mat-label>
+                        <input matInput name="remark" [(ngModel)]="xferAccept.Remark" required>
+                    </mat-form-field>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-2">
+                    <button type="button" class="me-5 pe-4 ps-4" (click)="acceptTransfer()" mat-raised-button color="primary" data-dismiss="modal" [disabled]="!xferAccept.secretCode">Submit</button>
+                    <button type="button" class="ms-5 pe-3 ps-3"  mat-raised-button color="warn" data-dismiss="modal">Cancel</button>
+                </div>
+            </div>
+      </form>
+    </div>
+  </ng-template>
