--- a/web/src/app/inventory/purchase-list/purchase-list.component.html
+++ b/web/src/app/inventory/purchase-list/purchase-list.component.html
@@ -112,7 +112,7 @@
 
 <!-- Modal -->
 <ng-template #content role="document" let-modal>
-  <div class="modal-header" style="height: 50px;">
+  <div class="modal-header" style="height: 50px; border-bottom: #ff651e 3px solid;">
     <h2 class="modal-title header pt-2" id="exampleModalLabel">Payment Detail's</h2>
     <button type="button" class="btn-close" aria-hidden="true" (click)="modal.dismiss('Cross click')"></button>
   </div>
