--- a/web/src/app/inventory/product-transfer/product-transfer.component.html
+++ b/web/src/app/inventory/product-transfer/product-transfer.component.html
@@ -39,7 +39,7 @@
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Select Barcode</mat-label>
                                         <mat-select name="FieldType" [(ngModel)]="Req.SearchBarCode"
-                                            (selectionChange)="getProductDataByBarCodeNo()" required #Typecontrol>
+                                             required #Typecontrol>
                                             <mat-option *ngFor="let bc of barCodeList  let i = index;"
                                                 [value]="bc.Barcode">
                                                 {{bc.Barcode}} # {{bc.BarCodeCount}} | {{bc.ProductName | uppercase}}
@@ -191,7 +191,7 @@
                                         <mat-label>Shop Filter</mat-label>
                                         <mat-select name="shopID" #shopID (selectionChange)="FilterData(shopID.value)">
                                             <mat-option value="0">All</mat-option>
-                                            <mat-option [value]="s.ID" *ngFor="let s of shopList"> {{s.Name}} <span
+                                            <mat-option [value]="s.ID" *ngFor="let s of shopLists"> {{s.Name}} <span
                                                     [style.color]="'blue'"
                                                     *ngIf="s.AreaName !== 'null'">({{s.AreaName}})</span> </mat-option>
                                         </mat-select>
