--- a/web/src/app/inventory/search-barcode/search-barcode.component.html
+++ b/web/src/app/inventory/search-barcode/search-barcode.component.html
@@ -115,14 +115,15 @@
                                     <div class="table-responsive">
                                         <table class="table table-striped table-hover table-sm table-bordered"
                                         style="border: 2px solid #fff !important;">
-                                            <thead class="thead-light">
-                                                <tr style="white-space: nowrap;">
+                                            <thead [ngClass]="{'old': UpdateBarcode, 'new': !UpdateBarcode}">
+                                                <tr style="white-space: nowrap;" (click)="showInput()">
                                                     <th class="text-left">S.No</th>
                                                     <th class="text-left">Print</th>
                                                     <th class="text-left">ProductName</th>
                                                     <th class="text-left">Status</th>
                                                     <th class="text-left">Barcode</th>
                                                     <th class="text-left">Remark</th>
+                                                    <th class="text-left" *ngIf="UpdateBarcode">Update</th>
                                                     <th class="text-left">CompanyName </th>
                                                     <th class="text-left">ShopName</th>
                                                     <th class="text-left">InvoiceNo</th>
@@ -133,13 +134,36 @@
                                                 </tr>
                                             </thead>
                                             <tbody class="text-center">
-                                                <tr *ngFor="let data of searchList ; let i = index;">
-                                                    <td>{{i+1}}</td>
+                                                <tr *ngFor="let data of searchList ; let i = index;" >
+                                                    <td>{{i+1}} </td>
                                                     <td><i class="far fa-file-pdf" style="color: #4652c2;font-size: 22px;cursor: pointer;"> </i></td>
                                                     <td>{{data.ProductName}}</td>
-                                                    <td>{{data.CurrentStatus}}</td>
-                                                    <td>{{data.Barcode}}</td>
-                                                    <td>{{data.Remark}}</td>
+                                                    <td *ngIf="!UpdateBarcode" >{{data.CurrentStatus}}</td>
+                                                    <td *ngIf="UpdateBarcode" style=" width: 120px;text-align: center;">
+                                                        <select style="height: 26px;" name="Status" [(ngModel)]="data.CurrentStatus" >
+                                                            <option value="Available">Available</option>
+                                                            <option value="Sold">Sold</option>
+                                                            <option value="Pre Order">Pre Order</option>
+                                                            <option value="Lost/Stolen">Lost/Stolen</option>
+                                                            <option value="Damaged">Damaged</option>
+                                                            <option value="Customer Return">Customer Return </option>
+                                                            <option value="Return To Supplier">Return To Supplier </option>
+                                                            <option value="Transfer Pending">Transfer Pending </option>
+                                                        </select>
+                                                    </td>
+                                                    <td *ngIf="!UpdateBarcode"> {{data.Barcode}}</td>
+                                                    <td *ngIf="UpdateBarcode">
+                                                        <input  style=" width: 90px; text-align: center;" [(ngModel)]="data.Barcode" #name="ngModel" [ngModelOptions]="{standalone: true}" name="data{{i}}">
+                                                    </td>
+                                                    <td *ngIf="!UpdateBarcode">{{(data.Remark !== 'null')? data.Remark: ''}}</td>
+                                                    <td *ngIf="UpdateBarcode" style=" width: 90px;text-align: center;">
+                                                        <input  [(ngModel)]="data.Remark" (ngModelChange)="data.Remark = onChange($event)" #name="ngModel" [ngModelOptions]="{standalone: true}" name="data{{i}}">
+                                                    </td>
+                                                    <td *ngIf="UpdateBarcode">
+                                                        <button class="barcodeUpBtn" (click)="updateBarcode(data)" >
+                                                               Save
+                                                        </button>
+                                                    </td>
                                                     <td>{{data.CompanyName}}</td>
                                                     <td>{{data.ShopName}}<span [style.color]="'blue'" *ngIf="data.AreaName !== 'null'">({{data.AreaName}})</span></td>
                                                     <td>{{data.InvoiceNo}}</td>
