--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -90,6 +90,7 @@
               <a href="javascript:void(0)" [routerLink]="['/inventory/supplier']" id="collapseExample">Supplier</a>
               <a href="javascript:void(0)" [routerLink]="['/inventory/purchaseList']" id="collapseExample">Purchase</a>
               <a href="javascript:void(0)" [routerLink]="['/inventory/product-transfer']" id="collapseExample">Product Transfer</a>
+              <a href="javascript:void(0)" [routerLink]="['/inventory/inventor-summary']" id="collapseExample">Inventory Summary</a>
               <a href="javascript:void(0)" [routerLink]="['/inventory/search-barcode']" id="collapseExample">Search Barcode</a>
               <a href="javascript:void(0)" [routerLink]="['/inventory/fitterList']" id="collapseExample">Fitter</a>
             </div>
